// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventCounterParty receive matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-text-901oao css-textMultiLine-cens5h"
    dir="auto"
    style={
      Object {
        "WebkitLineClamp": 2,
        "color": "rgba(66,69,74,1.00)",
        "direction": "ltr",
        "fontFamily": "Roboto",
        "fontSize": "16px",
        "fontWeight": "normal",
        "lineHeight": "22px",
        "textAlign": "left",
        "textDecoration": "none",
        "textTransform": "capitalize",
      }
    }
  >
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
      dir="auto"
      style={
        Object {
          "color": "rgba(66,69,74,1.00)",
          "direction": "ltr",
          "fontFamily": "Roboto",
          "fontSize": "10px",
          "fontWeight": "normal",
          "lineHeight": "14px",
          "marginRight": "3px",
          "textAlign": "center",
          "textDecoration": "none",
          "textTransform": "none",
          "verticalAlign": "middle",
        }
      }
    >
      From: 
    </span>
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
      dir="auto"
      style={
        Object {
          "color": "rgba(66,69,74,1.00)",
          "direction": "ltr",
          "fontFamily": "Roboto",
          "fontSize": "16px",
          "fontWeight": "500",
          "lineHeight": "19px",
          "textAlign": "center",
          "textDecoration": "none",
          "textTransform": "none",
          "verticalAlign": "middle",
        }
      }
    >
      Misao Matimbo
    </span>
  </div>
</div>
`;

exports[`EventCounterParty send matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-text-901oao css-textMultiLine-cens5h"
    dir="auto"
    style={
      Object {
        "WebkitLineClamp": 2,
        "color": "rgba(66,69,74,1.00)",
        "direction": "ltr",
        "fontFamily": "Roboto",
        "fontSize": "16px",
        "fontWeight": "normal",
        "lineHeight": "22px",
        "textAlign": "left",
        "textDecoration": "none",
        "textTransform": "capitalize",
      }
    }
  >
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
      dir="auto"
      style={
        Object {
          "color": "rgba(66,69,74,1.00)",
          "direction": "ltr",
          "fontFamily": "Roboto",
          "fontSize": "10px",
          "fontWeight": "normal",
          "lineHeight": "14px",
          "marginRight": "3px",
          "textAlign": "center",
          "textDecoration": "none",
          "textTransform": "none",
          "verticalAlign": "middle",
        }
      }
    >
      To: 
    </span>
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
      dir="auto"
      style={
        Object {
          "color": "rgba(66,69,74,1.00)",
          "direction": "ltr",
          "fontFamily": "Roboto",
          "fontSize": "16px",
          "fontWeight": "500",
          "lineHeight": "19px",
          "textAlign": "center",
          "textDecoration": "none",
          "textTransform": "none",
          "verticalAlign": "middle",
        }
      }
    >
      Misao Matimbo
    </span>
  </div>
</div>
`;

exports[`EventCounterParty withdraw matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-text-901oao css-textMultiLine-cens5h"
    dir="auto"
    style={
      Object {
        "WebkitLineClamp": 2,
        "color": "rgba(66,69,74,1.00)",
        "direction": "ltr",
        "fontFamily": "Roboto",
        "fontSize": "16px",
        "fontWeight": "normal",
        "lineHeight": "22px",
        "textAlign": "left",
        "textDecoration": "none",
        "textTransform": "capitalize",
      }
    }
  >
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
      dir="auto"
      style={
        Object {
          "color": "rgba(66,69,74,1.00)",
          "direction": "ltr",
          "fontFamily": "Roboto",
          "fontSize": "10px",
          "fontWeight": "normal",
          "lineHeight": "14px",
          "marginRight": "3px",
          "textAlign": "center",
          "textDecoration": "none",
          "textTransform": "none",
          "verticalAlign": "middle",
        }
      }
    >
      From: 
    </span>
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
      dir="auto"
      style={
        Object {
          "color": "rgba(66,69,74,1.00)",
          "direction": "ltr",
          "fontFamily": "Roboto",
          "fontSize": "16px",
          "fontWeight": "500",
          "lineHeight": "19px",
          "textAlign": "center",
          "textDecoration": "none",
          "textTransform": "none",
          "verticalAlign": "middle",
        }
      }
    >
      Misao Matimbo
    </span>
  </div>
</div>
`;
